5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1585_825.log
== SUBMITION (2019-04-01 23:06:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Valor do raio: "))
area = pi (r**2)
volume = (4*pi*(r**3))
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.183324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 5, in <module>
    area = pi (r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:07:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Valor do raio: "))
area = pi*(r**2)
volume = (4*pi*(r**3))
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.162608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 5, in <module>
    area = pi*(r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:07:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Valor do raio: "))
area = pi*(r**2)
volume = (4*pi*(r**3))
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:07:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Valor do raio: "))
area = pi*(r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.141619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 5, in <module>
    area = pi*(r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:07:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Valor do raio: "))
area = pi*(r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    area = pi*(r**2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:08:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Valor do raio: "))
area = pi* (r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.134955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 5, in <module>
    area = pi* (r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:08:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
r = float(input("Valor do raio: "))

area = pi* (r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.207314
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/825/main.py", line 6, in <module>
    area = pi* (r**2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:09:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from = math import *
r = float(input("Valor do raio: "))

area = pi* (r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.199095
-- ERROR:
  File "/home/codebench/codes/1585/825/main.py", line 4
    from = math import *
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:09:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from = math import *
r = float(input("Valor do raio: "))

area = pi* (r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.175585
-- ERROR:
  File "/home/codebench/codes/1585/825/main.py", line 4
    from = math import *
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:09:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from = math import *
r = float(input("Valor do raio: "))

area = pi* (r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- ERROR:
File "XXXX", line 4
    from = math import *
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:09:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
r = float(input("Valor do raio: "))

area = pi*(r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.198199
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:11:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
r = float(input("Valor do raio: "))

area = pi*(r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:11:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
r = float(input("Valor do raio: "))

area = pi*(r**2)
volume = (4*pi*(r**3))/3
print(round(area, 3))
print(round(volume, 3))
-- EXECUTION TIME:
0.200722
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
